--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Ceall8650/room-allocation#readme",
   "dependencies": {
+    "mini-css-extract-plugin": "^2.6.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
